--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,14 +4,16 @@
 
 body {
     font-family: Arial;
-    padding: 10px;
     background: #f1f1f1;
 }
 
 p {
     font-weight: bold;
 }
-
+.row {
+    margin-left: 0px;
+    margin-right: 0px;
+}
 /* OVERALL COLUMN STYLE */
 
 .box {
